[package]
name = "euler"
version = "0.1.0"
authors = ["Spartucus <spartucus@users.noreply.github.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = { version = "0.3.58" }
wasm-bindgen = { version = "^0.2" }
wasm-bindgen-test = { version = "^0.3" }
web-sys = { version = "^0.3", features = ["console"] }

[dev-dependencies]
criterion = "0.3"

[profile.test]
opt-level = 3

[build-dependencies]
cc = "1.0"
