[package]
name = "submission_new"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ark-bls12-381 = { version = "0.3.0" }
ark-ec = { version = "0.3.0" }
ark-ff = { version = "0.3.0" }
ark-serialize = "0.3.0"
ark-std = { version = "0.3.0" }
futures = "0.3.27"
instant = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = { version = "0.3.58" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
tokio = { version = "1.10.1", features = ['rt'] }
wasm-bindgen = { version = "^0.2" }
wasm-bindgen-test = { version = "^0.3" }
web-sys = { version = "^0.3", features = ["console"] }
wasm-bindgen-futures = "0.4.34"

[dev-dependencies]
criterion = "0.3"

[profile.test]
opt-level = 3
