[package]
name = "ec-gpu-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
log = "0.4.0"
crypto_cuda = { path = "../TrapdoorTech-zprize-crypto-cuda" }
crossbeam = "0.8.1"

thiserror = "1.0.10"
lazy_static = "1.4.0"

ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-ec = "0.3.0"
ark-bls12-377 = "0.3.0"
rayon = "1"

[dev-dependencies]
serial_test = "0.8.0"