[package]
name = "ec-gpu-kernels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-std = "0.3.0"
ark-poly = "0.3.0"
ark-bls12-377 = "0.3.0"

ocl = "0.19.3"
crypto_cuda = { path = "../TrapdoorTech-zprize-crypto-cuda" }

itertools = "0.10.1"
env_logger = "0.8"
log = "0.4.0"
lazy_static = "1.4.0"
thiserror = "1.0.10"
clap = { version = "3.1.6", features = ["derive"] }
tempfile = "3.2.0"

[features]
default = ["sn_cuda"]
cuda = []
sn_cuda = []