[package]
name = "snarkvm-cuda"
version = "0.1.0"
edition = "2018"

[features]
# By default, compile with ADX extension if the host supports it.
# Binary can be executed on systems similar to the host.
default = ["bls12_377"]
# Compile in portable mode, without ISA extensions.
# Binary can be executed on all systems.
portable = [ "blst/portable" ]
# Enable ADX even if the host CPU doesn't support it.
# Binary can be executed on Broadwell+ and Ryzen+ systems.
force-adx = [ "blst/force-adx" ]
bn254 = []
bls12_377 = []
bls12_381 = []
quiet = []
cuda-mobile = []

[dependencies]
blst = "^0.3.9"
sppark = { git = "https://github.com/supranational/sppark" }
rand = "^0"
rand_chacha = "^0"

[build-dependencies]
cc = "^1.0.70"
which = "^4.0"

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ] }
rayon = "1.5"

