[package]
name = "bellman-cuda"
version = "0.0.0"
edition = "2021"

[dependencies]
bellman-cuda-cudart = { path = "../cudart" }
bellman-cuda-cudart-sys = { path = "../cudart-sys" }
bellman-cuda-sys = { path = "../bellman-cuda-sys" }
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-bls12-377 = { version = "0.3.0" }

[dev-dependencies]
serial_test = "0.9.0"
rand = "^0"
rand_chacha = "^0"
