[package]
name = "msm-fpga"
version = "0.1.0"
authors = [
    "Kaveh Aasaraai <kaasaraai@jumptrading.com>",
    "Emanuele Cesena <ecesena@jumptrading.com>",
    "Rahul Maganti <rmaganti@jumpcrypto.com>",
    "Nicolas Stalder <nicolas@jumpcrypto.com>"
]
description = "A benchmark library for finite fields and elliptic curves"
homepage = "https://jumpcrypto.com"
repository = "https://github.com/nickray/zprize-msm"
documentation = "https://github.com/nickray/zprize-msm"
keywords = ["cryptography", "elliptic-curves", "fpga", "msm"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[features]
default = ["hw"]
hw = ["fpga/f1"]
timings = []

[dependencies]
ark-std = { version = "0.3", default-features = false }
rayon = { version = "1.5.3" }

our-bls12-377 = { package = "ark-bls12-377", path = "../bls12-377" }
our-ec = { path = "../algebra/ec", package = "ark-ec", default-features = false }
our-ff = { path = "../algebra/ff", package = "ark-ff", default-features = false }

fpga = { path = "../fpga" }

hex = "0.4"
indicatif = "0.17"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
seq-macro = "0.3"


